Componente header finalizado

--- a/frontend-web/src/app/header/header.component.html
+++ b/frontend-web/src/app/header/header.component.html
@@ -1,1 +1,10 @@
-<p>header works!</p>
+<div class="contenedor-header" id="contenedor-header">
+    <div class="contenedor-slogan">
+        <h4>We 🖤 the reading!</h4>
+    </div>
+    <div class="contenedor-fecha">
+        <h4>Administración/Control/Biblioteca</h4>
+        <br>
+        <h4 class="fecha">Hoy es {{date | date: "d"}} de {{date | date: "MMMM"}} de {{date | date: "yyyy"}}</h4>
+    </div>
+</div>
