--- a/frontend-web/src/app/sidebar/sidebar.component.css
+++ b/frontend-web/src/app/sidebar/sidebar.component.css
@@ -1,13 +1,12 @@
 .sidebar {
-    max-width: 5vw;
+    max-width: 5%;
     height: 100vh;
     background-color: #1C6758;
-    font-family: 'Roboto', sans-serif;
     transition: all 0.6s;
 }
 
 .sidebar-check {
-    max-width: 25vw;
+    max-width: 20%;
     transition: all 0.6s;
 }
 
@@ -85,10 +84,12 @@
 
 @media screen and (max-width: 1000px) {
     .sidebar {
-        max-width: 15vw;
+        max-width: 10%;
     }
     .sidebar-check {
-        max-width: 45vw;
+        max-width: 50%;
+        z-index: 1;
+        transition: all 0.8s;
     }
 }
 
