--- a/frontend-web/src/app/sidebar/sidebar.component.css
+++ b/frontend-web/src/app/sidebar/sidebar.component.css
@@ -87,9 +87,14 @@
         max-width: 10%;
     }
     .sidebar-check {
-        max-width: 50%;
+        max-width: 35%;
         z-index: 1;
         transition: all 0.8s;
     }
 }
 
+@media screen and (max-width: 700px) {
+    .sidebar-check {
+        max-width: 50%;
+    }
+}
