--- a/frontend-web/src/app/lendings/lendings.component.html
+++ b/frontend-web/src/app/lendings/lendings.component.html
@@ -1,1 +1,21 @@
-<p>lendings works!</p>
+<div class="contenedor-lendings" id="contenedor-lendings">
+    <div class="box-uno">
+        <div class="titulo">
+            <h4>Nuevo Préstamo</h4>
+        </div>
+        <div class="img">
+            <img src="../../assets/img/prestamo.gif" alt="prestamo" class="imagen">
+        </div>
+    </div>
+    <div class="box-dos">
+        <div class="formulario-prestamo">
+            <form action="/" class="prestamo">
+                <label for="documento-prestamo">Documento Usuario</label>
+                <input type="number" id="documento-prestamo" name="documento-prestamo" placeholder="Ingrese el documento del usuario">
+                <label for="libro-prestamo">Libro ID</label>
+                <input type="number" id="libro-prestamo" name="libro-prestamo" placeholder="Ingrese el ID del libro a prestar">
+                <button class="btn-lending">Prestar</button>
+            </form>
+        </div>
+    </div>
+</div>
