--- a/frontend-web/src/app/subir-libros/subir-libros.component.html
+++ b/frontend-web/src/app/subir-libros/subir-libros.component.html
@@ -1,1 +1,26 @@
-<p>subir-libros works!</p>
+<div class="contenedor-subir-libro" id="contenedor-subir-libro">
+    <div class="contenedor-form">
+        <h4>Subir nuevo Libro</h4>
+        <form action="/">
+            <label for="titulo-libro">Título</label>
+            <input type="text" id="titulo-libro" name="titulo-libro" placeholder="Ingrese el título">
+            <label for="fecha-publ">Año de publicación</label>
+            <input type="text" id="fecha-publ" name="fecha-publ" placeholder="Ingrese el año de publicación">
+            <label for="autor-libro">Autor</label>
+            <input type="text" id="autor-libro" name="autor-libro" placeholder="Ingrese el nombre del autor">
+            <label for="categoria-libro">Categoría</label>
+            <input type="text" id="categoria-libro" name="categoria-libro" placeholder="Ingrese la categoría">
+            <label for="edicion-libro">Edición</label>
+            <input type="text" id="edicion-libro" name="edicion-libro" placeholder="Ingrese la edición">
+            <label for="idioma-libro">Idioma</label>
+            <input type="text" id="idioma-libro" name="idioma-libro" placeholder="Ingrese el idioma">
+            <label for="paginas-libro">Páginas</label>
+            <input type="text" id="paginas-libro" name="paginas-libro" placeholder="Ingrese el numero de páginas">
+            <label for="stock-libro">Stock</label>
+            <input type="number" id="stock-libro" name="stock-libro" placeholder="Cantidad total">
+            <label for="disponibilidad-libro">Disponibles</label>
+            <input type="number" id="disponibilidad-libro" name="disponibilidad-libro" placeholder="Cantidad a prestar">
+            <button class="btn-subir">Subir</button>
+        </form>
+    </div>
+</div>
