--- a/frontend-web/src/app/sidebar/sidebar.component.html
+++ b/frontend-web/src/app/sidebar/sidebar.component.html
@@ -1,46 +1,41 @@
 <section class="sidebar" id="sidebar">
     <div class="sidebar-contenedor">
-        <div class="btn-responsive-sidebar">
-            <button class="btn-app" id="btn-menu" onclick="changeClass()">
-                <i class="fa-solid fa-grip-lines"></i>
-            </button>
-        </div>
         <div class="titulo-app" id="titulo-sidebar">
             <h2>iLib</h2>
         </div>
         <ul class="lista-botones" id="lista-botones">
             <li class="li-btn">
-                <a href="#" class="btn">
+                <a [routerLink]="['home']" class="btn">
                     <i class="fa-solid fa-house"></i>
                     Principal
                 </a>
             </li>
             <li class="li-btn">
-                <a href="#" class="btn">
+                <a [routerLink]="['lendings']" class="btn">
                     <i class="fa-solid fa-calendar-plus"></i>
                     Préstamos
                 </a>
             </li>
             <li class="li-btn">
-                <a href="#" class="btn">
+                <a [routerLink]="['devolutions']" class="btn">
                     <i class="fa-solid fa-calendar-check"></i>
                     Devoluciones
                 </a>
             </li>
             <li class="li-btn">
-                <a href="#" class="btn">
+                <a [routerLink]="['users']" class="btn">
                     <i class="fa-solid fa-user"></i>
                     Usuarios
                 </a>
             </li>
             <li class="li-btn">
-                <a href="#" class="btn">
+                <a [routerLink]="['books']" class="btn">
                     <i class="fa-solid fa-book"></i>
                     Libros
                 </a>
             </li>
             <li class="li-btn">
-                <a href="#" class="btn">
+                <a [routerLink]="['reports']" class="btn">
                     <i class="fa-solid fa-square-poll-vertical"></i>
                     Reportes
                 </a>
