--- a/frontend-web/src/app/welcome/welcome.component.css
+++ b/frontend-web/src/app/welcome/welcome.component.css
@@ -1,18 +1,12 @@
 .contenedor-welcome {
     position: fixed;
     top: 35%;
-    left: 5%;
-    width: 95%;
+    left: 20%;
+    width: 80%;
     transition: all 0.6s;
+    padding-left: 30px;
 }
 
-.contenedor-welcome-check {
-    position: fixed;
-    top: 35%;
-    width: 80%;
-    left: 20%;
-    transition: all 0.6s;
-}
 
 .titulo-welcome {
     padding-left: 15px;
@@ -32,13 +26,4 @@ img {
     width: 300px;
     max-width: 100%;
     float: right;
-}
-
-@media screen and (max-width: 1000px) {
-    .contenedor-welcome {
-        left: 10%;
-    }
-    .contenedor-welcome-check {
-        z-index: -1;
-    }
 }
