Pequeñas correcciones css y rutas

--- a/frontend-web/src/app/libros/libros.component.html
+++ b/frontend-web/src/app/libros/libros.component.html
@@ -27,7 +27,7 @@
         </table>
     </div>
     <div class="contenedor-botones-lb">
-        <button class="nuevo-libro">Nuevo</button>
+        <a [routerLink]="['up']"><button class="nuevo-usuario">Nuevo</button></a>
         <button class="editar-libro">Editar</button>
         <button class="borrar-libro">Borrar</button>
     </div>
