--- a/frontend-web/src/app/usuarios/usuarios.component.html
+++ b/frontend-web/src/app/usuarios/usuarios.component.html
@@ -23,7 +23,7 @@
         </table>
     </div>
     <div class="contenedor-botones">
-        <button class="nuevo-usuario">Nuevo</button>
+        <a [routerLink]="['up']"><button class="nuevo-usuario">Nuevo</button></a>
         <button class="editar-usuario">Editar</button>
         <button class="borrar-usuario">Borrar</button>
     </div>
