Correccion titulo sidebar

--- a/frontend-web/src/app/libros/libros.component.html
+++ b/frontend-web/src/app/libros/libros.component.html
@@ -12,7 +12,7 @@
                 <tr>
                     <th class="dato-id">ID</th>
                     <th class="dato-titulo">Título</th>
-                    <th class="dato-fecha">Fecha de publicación</th>
+                    <th class="dato-fecha">Fecha</th>
                     <th class="dato-autor">Autor</th>
                     <th class="dato-categoria">Categoría</th>
                     <th class="dato-edicion">Edición</th>
