--- a/frontend-web/src/app/sidebar/sidebar.component.css
+++ b/frontend-web/src/app/sidebar/sidebar.component.css
@@ -31,7 +31,7 @@
     opacity: 1;
 }
 
-.titulo-app, .titulo-check {
+.titulo-app{
     width: 75%;
     text-align: center;
     padding: 15px;
@@ -40,15 +40,7 @@
     border-bottom: #fff 2px solid;
 }
 
-.titulo-app {
-    transform: translateX(-500%);
-}
-
-.titulo-check {
-    transform: translateX(0%);
-}
-
-.lista-botones, .lista-botones-check {
+.lista-botones{
     list-style: none;
     margin-top: 20px;
     width: 100%;
