Pequeños cambios en el front

--- a/frontend-web/src/app/libros/libros.component.html
+++ b/frontend-web/src/app/libros/libros.component.html
@@ -27,8 +27,7 @@
         </table>
     </div>
     <div class="contenedor-botones-lb">
-        <a [routerLink]="['up']"><button class="nuevo-usuario">Nuevo</button></a>
-        <button class="editar-libro">Editar</button>
-        <button class="borrar-libro">Borrar</button>
+        <button class="editar-libro">Editar un Libro</button>
+        <button class="borrar-libro">Borrar un Libro</button>
     </div>
 </div>
