--- a/frontend-web/src/app/sidebar/sidebar.component.html
+++ b/frontend-web/src/app/sidebar/sidebar.component.html
@@ -29,9 +29,21 @@
                 </a>
             </li>
             <li class="li-btn">
+                <a [routerLink]="['users/up']" class="btn">
+                    <i class="fa-solid fa-user-plus"></i>
+                    Crear Usuario
+                </a>
+            </li>
+            <li class="li-btn">
                 <a [routerLink]="['books']" class="btn">
                     <i class="fa-solid fa-book"></i>
                     Libros
+                </a>
+            </li>
+            <li class="li-btn">
+                <a [routerLink]="['books/up']" class="btn">
+                    <i class="fa-solid fa-file-circle-plus"></i>
+                    Subir Libro
                 </a>
             </li>
             <li class="li-btn">
