--- a/frontend-web/src/app/usuarios/usuarios.component.html
+++ b/frontend-web/src/app/usuarios/usuarios.component.html
@@ -10,6 +10,7 @@
         <table>
             <thead>
                 <tr>
+                    <th class="dato-id">ID</th>
                     <th class="dato-documento">Documento</th>
                     <th class="dato-nombre">Nombre</th>
                     <th class="dato-apellido">Apellido</th>
@@ -23,8 +24,7 @@
         </table>
     </div>
     <div class="contenedor-botones">
-        <a [routerLink]="['up']"><button class="nuevo-usuario">Nuevo</button></a>
-        <button class="editar-usuario">Editar</button>
-        <button class="borrar-usuario">Borrar</button>
+        <button class="editar-usuario">Editar un Usuario</button>
+        <button class="borrar-usuario">Borrar un Usuario</button>
     </div>
 </div>
