--- a/frontend-web/src/app/devoluciones/devoluciones.component.html
+++ b/frontend-web/src/app/devoluciones/devoluciones.component.html
@@ -5,10 +5,10 @@
         </div>
         <div class="formulario-devolucion">
             <form action="/" class="devolucion">
-                <label for="documento-devolucion">Documento Usuario</label>
-                <input type="number" id="documento-devolucion" name="documento-devolucion" placeholder="Ingrese el documento del usuario">
-                <label for="libro-devolucion">Libro ID</label>
-                <input type="number" id="libro-devolucion" name="libro-devolucion" placeholder="Ingrese el ID del libro a devolver">
+                <label for="documento-devolucion">ID Usuario</label>
+                <input type="number" id="documento-devolucion" name="documento-devolucion" placeholder="Ingrese el ID del usuario" required>
+                <label for="libro-devolucion">ID Libro</label>
+                <input type="number" id="libro-devolucion" name="libro-devolucion" placeholder="Ingrese el ID del libro a devolver" required>
                 <button class="btn-devolucion">Devolver</button>
             </form>
         </div>   
