--- a/frontend-web/src/app/lendings/lendings.component.html
+++ b/frontend-web/src/app/lendings/lendings.component.html
@@ -10,10 +10,10 @@
     <div class="box-dos">
         <div class="formulario-prestamo">
             <form action="/" class="prestamo">
-                <label for="documento-prestamo">Documento Usuario</label>
-                <input type="number" id="documento-prestamo" name="documento-prestamo" placeholder="Ingrese el documento del usuario">
-                <label for="libro-prestamo">Libro ID</label>
-                <input type="number" id="libro-prestamo" name="libro-prestamo" placeholder="Ingrese el ID del libro a prestar">
+                <label for="documento-prestamo">ID Usuario</label>
+                <input type="number" id="documento-prestamo" name="documento-prestamo" placeholder="Ingrese el ID del usuario" required>
+                <label for="libro-prestamo">ID Libro</label>
+                <input type="number" id="libro-prestamo" name="libro-prestamo" placeholder="Ingrese el ID del libro a prestar" required>
                 <button class="btn-lending">Prestar</button>
             </form>
         </div>
