--- a/frontend-web/src/app/devoluciones/devoluciones.component.css
+++ b/frontend-web/src/app/devoluciones/devoluciones.component.css
@@ -1,5 +1,5 @@
 .contenedor-devoluciones {
-    position: fixed;
+    position: absolute;
     top: 35%;
     left:20%;
     width: 80%;
@@ -60,4 +60,14 @@
     cursor: pointer;
     color: #fff;
     border: none;
+}
+
+@media screen and (max-width: 1000px) {
+   .box-uno {
+    width: 100%;
+   }
+
+   .box-dos {
+    width: 0;
+   }
 }
