--- a/frontend-web/src/app/sidebar/sidebar.component.css
+++ b/frontend-web/src/app/sidebar/sidebar.component.css
@@ -1,5 +1,6 @@
 .sidebar {
-    max-width: 20%;
+    width: 20%;
+    position: fixed;
     height: 100vh;
     background-color: #1C6758;
     transition: all 0.6s;
