--- a/frontend-web/src/app/subir-libros/subir-libros.component.css
+++ b/frontend-web/src/app/subir-libros/subir-libros.component.css
@@ -1,5 +1,5 @@
 .contenedor-subir-libro {
-    position: fixed;
+    position: absolute;
     top: 35%;
     left: 20%;
     width: 80%;
@@ -55,6 +55,9 @@
         left: 20%;
     }
     .contenedor-form form {
-        max-height: 57vh;
+        max-height: 100vh;
+    }
+    .contenedor-form form input {
+        width: 100%;
     }
 }
