Se agrega pipe de fecha en header

--- a/Aplicacion Web/biblioteca-app/src/app/header/header.component.html
+++ b/Aplicacion Web/biblioteca-app/src/app/header/header.component.html
@@ -4,6 +4,6 @@
     </div>
     <div class="info-contenedor">
         <p>Administración/Control/Biblioteca</p>
-        <h4>Hoy es 30 de Septiembre de 2022</h4>
+        <h4>Hoy es {{today | date: "dd"}} de {{today | date: "MMMM"}} de {{today | date: "yyyy"}}</h4>
     </div>
 </div>
